Task-58807: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem notifications in the top bar (#443)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
@@ -180,6 +180,9 @@ body {
 
 .middle-topNavigation-container {
   #NotificationPopoverPortlet {
+    .notif-badge-color {
+      background-color: @badgePrimaryColor;
+    }
     .container.white{
       width: auto!important;
     }
